[package]
name = "collision"
version = "0.1.0"
authors = ["Artem Borisovskiy <bytefu@gmail.com>"]
edition = "2024"

[dependencies]
serde = "1.0.218"
serde_derive = "1.0.218"
toml = "0.8.20"
num-traits = "0.2.19"
itertools = "0.14.0"
anyhow = "1.0.97"
libc = "0.2.170"
vello = "0.4.0"
winit = "0.30.9"
pollster = "0.4.0"
radsort = "0.1.1"

[dependencies.opencl3]
version = "0.11"
features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]

[profile.release]
debug = true
