[package]
name = "collision"
version = "0.1.0"
authors = ["Artem Borisovskiy <bytefu@gmail.com>"]
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
num-traits = "0.2.19"
itertools = "0.14.0"
anyhow = "1.0.97"
vello = "0.4.1"
winit = "0.30.9"
pollster = "0.4.0"
rdst = "0.20.14"
skrifa = "0.29.1"
bytemuck = "1.22.0"
rand = "0.9.0"
crossbeam = "0.8.4"
num_cpus = "1.16.0"

[dependencies.opencl3]
version = "0.11"
features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]

[profile.release]
debug = true
