[package]
name = "collision"
version = "0.1.0"
authors = ["Artem Borisovskiy <bytefu@gmail.com>"]
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.23"
num-traits = "0.2.19"
itertools = "0.14.0"
anyhow = "1.0.98"
vello = "0.4.1"
winit = "0.30.11"
pollster = "0.4.0"
skrifa = "0.31.3"
bytemuck = "1.23.0"
rand = "0.9.1"
crossbeam = "0.8.4"
num_cpus = "1.17.0"
rayon = "1.10.0"

[dependencies.opencl3]
version = "0.12.1"
# path = "opencl3-0.12.0"
features = ["CL_VERSION_2_1", "CL_VERSION_2_2", "CL_VERSION_3_0"]

[profile.release]
debug = true
